    player menu item, to still be accessible.
17. Minfiy each JS file, as opposed to combining into one, as otherwise the
    speed of scrolling large lists is affected.
18. Set icon font to block instead of having browser use a fallback in case of
    slow network.
19. Expand the list of genres that will prompt for composer or conductor.
20. Add grid/list toggle button.
21. Because of added grid/list toggle, remove 'Home' button - this can still be
    accessed via menu. Alternatively, longpress on back button goes home.
22. Use view-recycler for all lists of more than 200 items.
23. When fullscreen connection lost dialog is shown, immediately try a
    reconnect, and enable 'Reconnect' button 2 seconds after this.

0.6.0
-----
1. When showing brief popup due to action (e.g. Music Walk With Me), do not
   show 'Empty'
2. Fix large playlists with duplicate tracks.
3. Use view-recycler to allow grids with more than 300 items.

0.5.4
-----
 1. When browsing Genres -> Classical, allow user to list composers, conductors,
    artists, or albums.
 2. When browsing Genres -> Jazz, allow user to list composers, artists, or
    albums.
 3. Add jumplist support to playlists listing.
 4. Context menu for dynamic playlists.
 5. Remove long-press/middle-click for sleep menu from play/pause button in
    mobile toolbar when now-playing page shown. The long-press seems to get
    confused and cause a play/pase to happen when the 'i' button is clicked.
 6. Fix middle-click also firing left-click event when widget has a longpress
    handler.
 7. When current track's cover changes, update it's 'key' so that vue is forced
    to refresh.
 8. Attempt to detect when computer has been asleep, and refresh status when
    awoken.
 9. Scroll to current queue item when change to queue page if current was
    changed whilst on other view.
10. Show Material version in Information dialog sub-title.

0.5.3
-----
 1. Add mouse-wheel control of volume.